Version 2.02.86 -  
=================================
  Fix reduction of mirrors with striped segments to always align to stripe size.
  Validate mirror segments size.
  Fix extent rounding for striped volumes (never reduce more than requested).
  Fix create_temp_name to replace any '/' found in the hostname with '?'.
  Always use append to file in lvmdump (selinux policy - no file truncation).
  Propagate test mode to clvmd to skip activation and changes to held locks.
  Defer writing PV labels to vg_write.
  Store label_sector only in struct physical_volume.
  Permit --available with lvcreate so non-snapshot LVs need not be activated.
  Report sector containing label in verbose message.
  Clarify error message when unable to convert an LV into a snapshot of an LV.
  Add and use dev_open_readonly and variations.
  Do not log a superfluous stack message when the lv is properly processed.
  Do not issue an error message when unable to remove .cache on read-only fs.
  Avoid memlock size mismatch by preallocating stdio line buffers.
  Reorganize lvconvert --repair code to allow reuse.
  Rewrite vgreduce --removemissing --force leveraging shared lvconvert code.

Version 2.02.85 - 29th April 2011
=================================
  Add new obtain_device_list_from_udev setting to lvm.conf.
  Obtain device list from udev by default if LVM2 is compiled with udev support.
  Add test for vgimportclone and querying of vgnames with duplicate pvs.
  Avoid use of released memory when duplicate PV is found.
  Add "devices/issue_discards" to lvm.conf.
  Issue discards on lvremove and lvreduce etc. if enabled and supported.
  Add seg_pe_ranges and devices fields to liblvm.
  Fix incorrect tests for dm_snprintf() failure.
  Fix some unmatching sign comparation gcc warnings in the code.
  Support lv_extend() on empty LVs.
  Avoid regenerating cache content when exported VG buffer is unchanged.
  Extend the set of memory regions that are not locked to memory.